--- a/repositoryUserInterface/app/views/Application/device.html
+++ b/repositoryUserInterface/app/views/Application/device.html
@@ -43,11 +43,11 @@
 				$("#newDevice").hide();
 
 				$("#getDeviceErrorDiv").hide();
-				$( "#dialog" ).dialog({
-			autoOpen: false,
-			show: "blind",
-			hide: "explode"
-		})
+				$("#dialog").dialog({
+					autoOpen : false,
+					show : "blind",
+					hide : "explode"
+				})
 
 				/**
 				 * @param :Error Information
@@ -169,7 +169,6 @@
 									$(idSelector).append("<button id=" + editDeviceButton + ">Edit Device</button>");
 									$(idSelector).append("<button id=" + saveAsButton + ">Save As</button>");
 
-
 									$('#' + removeDeviceButton).click(function() {
 
 										var deviceIndex = this.id.toString();
@@ -196,9 +195,8 @@
 										var messageToEditDevice = {}
 										messageToEditDevice["devicename"] = deviceToBeEdited;
 										messageToEditDevice[SECRET_KEY] = secretkey;
-										window.location=URL_EDIT_DEVICE+"?devicename="+deviceToBeEdited+"&isdevice=true&mode=update";
+										window.location = URL_EDIT_DEVICE + "?devicename=" + deviceToBeEdited + "&isdevice=true&mode=update";
 
-										
 									});
 									$('#' + saveAsButton).click(function() {
 
@@ -208,13 +206,11 @@
 										var messageToEditDevice = {}
 										messageToEditDevice["devicename"] = deviceToBeEdited;
 										messageToEditDevice[SECRET_KEY] = secretkey;
-										window.location=URL_EDIT_DEVICE+"?devicename="+deviceToBeEdited+"&isdevice=true&mode=create";
+										window.location = URL_EDIT_DEVICE + "?devicename=" + deviceToBeEdited + "&isdevice=true&mode=create";
 
-										
 									});
 									if(receivedData[DEVICE_ARRAY][i].hasOwnProperty(DEVICE_SENSORS)) {
 										$(idSelector).append("<div class=\"oldSensors\"></div>");
-
 
 										//$(idSelector).append("<p><b>Sensors</b></p>");
 										var sensor = receivedData[DEVICE_ARRAY][i][DEVICE_SENSORS];
@@ -222,23 +218,24 @@
 										for(var j = 0; j < numberOfSensors; j++) {
 											//alert(numberOfSensors);
 											var sensorName = sensor[j][DEVICE_SENSOR_NAME];
+											var sensorID = sensor[j][DEVICE_SENSOR_ID];
 											//var sensorName = sensor[j][DEVICE_SENSOR_ID];
 
 											var sensorId = "sensor_" + i.toString() + "_" + j.toString();
 
-											$(idSelector).children(".oldSensors").append("<div class=oldSensor id ="+sensorId+"><label>SensorName<label><input value=" + sensorName + "></input><label>SensorID<label><input value=" + sensorId + "></input></div>");
+											$(idSelector).children(".oldSensors").append("<div class=oldSensor id =" + sensorId + "><label>SensorName<label><input value=" + sensorName + "></input><label>SensorID<label><input value=" + sensorID + "></input></div>");
 											var channel = sensor[j][DEVICE_SENSOR_CHANNELS];
 											var numberOfChannels = channel.length;
 
 											//$(idSelector).children("#oldSensor").append("<p>Channels</p>");
 											var channelTableId = sensorId + "channel";
-											$(idSelector).children(".oldSensors").children("#"+sensorId).append("<table id=" + channelTableId + "></table>");
+											$(idSelector).children(".oldSensors").children("#" + sensorId).append("<table id=" + channelTableId + "></table>");
 											for(var k = 0; k < numberOfChannels; k++) {
 												var channelName = channel[k][DEVICE_SENSOR_CHANNEL_NAME];
 												var channelType = channel[k][DEVICE_SENSOR_CHANNEL_TYPE];
 												var channelUnit = channel[k][DEVICE_SENSOR_CHANNEL_UNIT];
 												var channelSamplingPeriod = channel[k][DEVICE_SENSOR_CHANNEL_SAMPLING_PERIOD];
-												$("#" + channelTableId).append("<tr><td><label>ChannelName</label><input value=" + channelName + "></input></td><td><label>ChannelType</label><input value=" + channelType + "></input></td><td><label>ChannelUnit</label><input value=" + channelUnit + "></input></td><td><label>ChannelSamplingPeriod</label><input value=" + channelSamplingPeriod + "></input></td></tr>");
+												$("#" + channelTableId).append("<tr><td><label>Name</label><input value=" + channelName + "></input></td><td><label>Type</label><input value=" + channelType + "></input></td><td><label>Unit</label><input value=" + channelUnit + "></input></td><td><label>SamplingPeriod</label><input value=" + channelSamplingPeriod + "></input></td></tr>");
 
 											}
 
@@ -248,6 +245,7 @@
 									if(receivedData[DEVICE_ARRAY][i].hasOwnProperty(DEVICE_ACTUATORS)) {
 
 										$(idSelector).append("<div class=\"oldActuators\"></div>");
+										$(idSelector).children(".oldActuators").append("<div id=ipDiv><label id=\"newDeviceIPLabel\">IP</label><input id=newDeviceIP value=" + receivedData[DEVICE_ARRAY][i][DEVICE_IP] + "></input></div>");
 										var actuator = receivedData[DEVICE_ARRAY][i][DEVICE_ACTUATORS];
 										var numberOfActuators = actuator.length;
 										for(var j = 0; j < numberOfActuators; j++) {
@@ -260,6 +258,9 @@
 
 								}
 
+							} else {
+								$("#getDeviceErrorDiv").html("No device registered");
+								$("#getDeviceErrorDiv").show();
 							}
 
 						}
@@ -284,180 +285,10 @@
 					}
 				});
 				$(".accordion").accordion();
-				
-				$("#newDeviceButton").click(function() {
-			//$( "#dialog" ).dialog( "open" );
-			$("#newDevice").show();
-			return false;
-		});
 
-				$("#addNewSensor").click(function() {
-					$("#newSensorsDiv").append("<div id='newSensor'><hr/><label>SensorName</label><input id='newSensorName' class='newSensor'></input><br/><label>SensorID</label><input id='newSensorID' class='newSensorID'></input><br/>" + "<button class='newSensorAddChannel'>Add channels</button>" + "<button class='newSensorRemove'>Delete Sensor</button>" + "<div class='newSensorChannels'></div></div>");
-					$(".newSensorRemove").click(function() {
-
-						$(this).parent().remove();
-						newNumberOfSensors--;
-						return false;
-					});
-					$('.newSensorAddChannel').unbind('click').click(function() {
-
-						($(this).siblings(".newSensorChannels")).append("<tr><td><label>Name</label></td><td><input class='labName'/></td><td><label>Unit</label></td><td><input class='labUnit'/><td><label>Type</label></td><td><input class='labType'/></td><td><label>SamplingPeriod</label></td><td><input class='labSampling'/><td><button class='removeChannel'>Remove Channel</button></td></tr>");
-						$(".removeChannel").click(function() {
-
-							$(this).parent().parent().remove();
-
-						});
-						return false;
-					});
-					newNumberOfSensors++;
-					return false;
-				});
-				/*
-				 * Description:Function to add a new Actuator
-				 * This function is called when the button corresponding to add new actuator is clicked
-				 * It would create new DIV and place in it the new Actuator within a HTML label
-				 * It also binds a function to remove the actuator
-				 */
-
-				$("#addNewActuator").click(function() {
-					$("#newActuatorsDiv").append("<div id='newActuator'><hr/><label>ActuatorName</label><input></input><br/><button class='removeActuator'>Remove Actuator</button></div>");
-					newNumberOfActuators++;
-					$(".removeActuator").click(function() {
-						$(this).parent().remove();
-						newNumberOfActuators--;
-					});
-					return false;
-				});
-				/*
-				 * This function is invoked when Done Device is clicked.
-				 * It does a validation for all the fields present in the device
-				 */
-				$("#doneDevice").click(function() {
-					errorState = false;
-					errorInformation = "";
-					deviceObject[DEVICE_ACTUATORS] = new Array();
-					deviceObject[DEVICE_SENSORS] = new Array();
-					var actuatorCount = 0;
-					var sensorCount = 0;
-
-					//Adding Actuators
-					$("#newActuatorsDiv").find("input").each(function() {
-
-						deviceObject[DEVICE_ACTUATORS][actuatorCount] = {};
-						deviceObject[DEVICE_ACTUATORS][actuatorCount][DEVICE_ACTUATOR_NAME] = $(this).val();
-						validateFieldAndMakeErrorInformation(this, MIN_LENGTH_ACTUATOR_NAME, MAX_LENGTH_ACTUATOR_NAME, "actuator", "name", actuatorCount);
-						actuatorCount++;
-					});
-					//Adding sensors
-					$("#newSensorsDiv").find("input.newSensor").each(function() {
-
-						deviceObject[DEVICE_SENSORS][sensorCount] = {};
-						if($(this).attr('id') == "newSensorName") {
-							deviceObject[DEVICE_SENSORS][sensorCount][DEVICE_SENSOR_NAME] = $(this).val();
-
-							validateFieldAndMakeErrorInformation(this, MIN_LENGTH_SENSOR_NAME, MAX_LENGTH_SENSOR_NAME, "sensor", "name", sensorCount);
-							deviceObject[DEVICE_SENSORS][sensorCount][DEVICE_SENSOR_ID] = $(this).siblings(".newSensorID").val();
-							validateFieldAndMakeErrorInformation($(this).siblings(".newSensorID"), MIN_LENGTH_SENSOR_ID, MAX_LENGTH_SENSOR_ID, "sensor", "id", sensorCount);
-							validateNumericFieldValue($(this).siblings(".newSensorID"), MIN_VALUE_SENSOR_ID, MAX_VALUE_SENSOR_ID, "sensor", "ID", sensorCount);
-						}
-
-						deviceObject[DEVICE_SENSORS][sensorCount][DEVICE_SENSOR_CHANNELS] = new Array();
-						//Now attaching it's channels to it
-						var newChannelCount = 0;
-						$(this).parent().children(".newSensorChannels").find("tr").each(function() {
-							deviceObject[DEVICE_SENSORS][sensorCount][DEVICE_SENSOR_CHANNELS][newChannelCount] = {};
-							$(this).find('td').each(function() {
-								$(this).find('input').each(function() {
-
-									if(($(this).attr("class")).toString().indexOf(CLASS_DEVICE_SENSOR_CHANNEL_NAME) >= 0) {
-
-										deviceObject[DEVICE_SENSORS][sensorCount][DEVICE_SENSOR_CHANNELS][newChannelCount][DEVICE_SENSOR_CHANNEL_NAME] = $(this).val();
-										validateFieldAndMakeErrorInformation(this, MIN_LENGTH_CHANNEL_NAME, MAX_LENGTH_CHANNEL_NAME, "sensor's " + newChannelCount.toString() + " th channel", "name", sensorCount);
-
-									}
-									if(($(this).attr("class")).toString().indexOf(CLASS_DEVICE_SENSOR_CHANNEL_UNIT) >= 0) {
-										deviceObject[DEVICE_SENSORS][sensorCount][DEVICE_SENSOR_CHANNELS][newChannelCount][DEVICE_SENSOR_CHANNEL_UNIT] = $(this).val();
-										validateFieldAndMakeErrorInformation(this, MIN_LENGTH_CHANNEL_UNIT, MAX_LENGTH_CHANNEL_UNIT, "sensor's " + newChannelCount.toString() + " th channel", "unit", sensorCount);
-
-									}
-									if(($(this).attr("class")).toString().indexOf(CLASS_DEVICE_SENSOR_CHANNEL_SAMPLING_PERIOD) >= 0) {
-										deviceObject[DEVICE_SENSORS][sensorCount][DEVICE_SENSOR_CHANNELS][newChannelCount][DEVICE_SENSOR_CHANNEL_SAMPLING_PERIOD] = $(this).val();
-										validateFieldAndMakeErrorInformation(this, MIN_LENGTH_CHANNEL_SAMPLING_PERIOD, MAX_LENGTH_CHANNEL_SAMPLING_PERIOD, "sensor's " + newChannelCount.toString() + " th channel", "sampling period", sensorCount);
-										validateNumericFieldValue(this, MIN_VALUE_CHANNEL_SAMPLING_PERIOD, MAX_VALUE_CHANNEL_SAMPLING_PERIOD, "sensor's " + newChannelCount.toString(), "sampling period", sensorCount);
-
-									}
-									if(($(this).attr("class")).toString().indexOf(CLASS_DEVICE_SENSOR_CHANNEL_TYPE) >= 0) {
-										deviceObject[DEVICE_SENSORS][sensorCount][DEVICE_SENSOR_CHANNELS][newChannelCount][DEVICE_SENSOR_CHANNEL_TYPE] = $(this).val();
-										validateFieldAndMakeErrorInformation(this, MIN_LENGTH_CHANNEL_TYPE, MAX_LENGTH_CHANNEL_TYPE, "sensor's " + newChannelCount.toString() + " th channel", "type", sensorCount);
-
-									}
-								});
-							});
-							newChannelCount++;
-
-						});
-						if(newChannelCount == 0)//Did not add any channel for this sensor
-						{
-							errorState = true;
-							errorInformation = errorInformation + " Enter channel for " + sensorCount.toString() + "sensor";
-						}
-						sensorCount++;
-
-					});
-					//Adding device information
-					//Adding fake info for LAT/LON
-					deviceObject[DEVICE_LATITUDE] = "1";
-					deviceObject[DEVICE_LONGITUDE] = "1";
-					deviceObject[DEVICE_NAME] = $("#newDeviceName").val();
-					validateFieldAndMakeErrorInformation($("#newDeviceName"), MIN_LENGTH_DEVICE_NAME, MAX_LENGTH_DEVICE_NAME, "device", "name", "");
-					deviceObject[DEVICE_LOCATION] = $("#newDeviceLocation").val();
-					validateFieldAndMakeErrorInformation($("#newDeviceLocation"), MIN_LENGTH_DEVICE_LOCATION, MAX_LENGTH_DEVICE_LOCATION, "device", "location", "");
-
-					deviceObject[DEVICE_TAGS] = $("#newDeviceTags").val();
-					validateFieldAndMakeErrorInformation($("#newDeviceTags"), MIN_LENGTH_DEVICE_TAGS, MAX_LENGTH_DEVICE_TAGS, "device", "tags", "");
-
-					deviceObject[DEVICE_IP] = $("#newDeviceIP").val();
-					validateFieldAndMakeErrorInformation($("#newDeviceIP"), MIN_LENGTH_DEVICE_IP, MAX_LENGTH_DEVICE_IP, "device", "IP", "");
-
-					if((sensorCount == 0) && (actuatorCount == 0)) {
-						errorState = true;
-						errorInformation += " Please add either a sensor or an actuator to the device";
-
-					}
-					if(actuatorCount == 0) {
-						delete deviceObject["actuators"];
-					}
-					if(sensorCount == 0) {
-						delete deviceObject["sensors"];
-					}
-
-					if(errorState == true) {
-
-						alertAddDeviceError(errorInformation);
-
-						return false;
-					} else {
-						$("#errorDiv").html("");
-						$("#errorDiv").hide();
-						//Hide error div
-					}
-
-					//Now the actual object to be sent to the broker is created,after all validation  has been done
-					var deviceRequestToSend = {};
-					deviceRequestToSend[DEVICE_PROFILE] = deviceObject;
-					deviceRequestToSend[SECRET_KEY] = secretkey;
-					try {
-						$.post(URL_ADD_DEVICE, JSON.stringify(deviceRequestToSend), function(data) {
-							if(data[RESPONSE_STATUS_CODE] == 0) {
-								window.location.reload();
-							} else {
-								alertAddDeviceError("Following error occured: " + data[RESPONSE_MESSAGE]);
-							}
-
-						});
-					} catch(e) {
-						alertAddDeviceError(e);
-					}
+				$("#addNewDeviceOrTemplate").click(function() {
+					//$( "#dialog" ).dialog( "open" );
+					window.location = URL_EDIT_DEVICE + "?devicename=" + FAKE_DEVICE_NAME + "&isdevice=true&mode=create";
 					return false;
 				});
 			});
@@ -477,40 +308,9 @@
 		<h1>List of devices</h1>
 		<div id="accordion"></div>
 		<div id="errorDiv" class="errorDiv"></div>
-		<h2 id="newDeviceButton">Add new Device</h2>
-		<div id ="newDevice">
-			
-			<br/>
-			<label id="newDeviceNameLabel">Name</label>
-			<input type="text" id="newDeviceName">
-			</input>
-			<br/>
-			<label id="newDeviceLocationLabel">Location</label>
-			<input type="text" id="newDeviceLocation">
-			</input>
-			<br/>
-			<label id="newDeviceIPLabel">IP</label>
-			<input type="text" id="newDeviceIP">
-			</input>
-			<br/>
-			<label id="newDeviceTagsLabel">Tags</label>
-			<input type="text" id="newDeviceTags">
-			</input>
-			<br/>
-		
-		<button id ="addNewSensor">
-			Add a sensor
+		<button id="addNewDeviceOrTemplate">
+			Create New Device/Template
 		</button>
-		<button id ="addNewActuator">
-			Add an actuator
-		</button>
-		<div id="newSensorsDiv"></div>
-		<div id="newActuatorsDiv"></div>
-		<button id ="doneDevice">
-			Device Done
-		</button>
-		</div>
-		
 		<input type="hidden" id =username value =${username}>
 		</input>
 	</body>
